--- a/school2/nbproject/project.properties
+++ b/school2/nbproject/project.properties
@@ -27,13 +27,11 @@ file.reference.asm-analysis-2.2.jar=D:\\aaaSuite\\lib\\asm-analysis-2.2.jar
 file.reference.asm-attrs-2.2.jar=D:\\aaaSuite\\lib\\asm-attrs-2.2.jar
 file.reference.asm-tree-2.2.jar=D:\\aaaSuite\\lib\\asm-tree-2.2.jar
 file.reference.asm-util-2.2.jar=D:\\aaaSuite\\lib\\asm-util-2.2.jar
-file.reference.avalon-configuration.jar=../olaplib/avalon-configuration.jar
 file.reference.barbecue-1.1.jar=D:\\aaaSuite\\lib\\barbecue-1.1.jar
 file.reference.bcprov-jdk14.jar=D:\\aaaSuite\\lib\\bcprov-jdk14.jar
 file.reference.beansbinding-0.6.1.jar=D:\\aaaSuite\\lib\\beansbinding-0.6.1.jar
 file.reference.beansbinding-1.2.1.jar=D:\\aaaSuite\\lib\\beansbinding-1.2.1.jar
 file.reference.bsh-2.0b4.jar=D:\\aaaSuite\\lib\\bsh-2.0b4.jar
-file.reference.castor-0.9.9.1-xml.jar=../olaplib/castor-0.9.9.1-xml.jar
 file.reference.cglib-2.1.jar=D:\\aaaSuite\\lib\\cglib-2.1.jar
 file.reference.chat.jar=D:\\aaaSuite\\lib\\chat.jar
 file.reference.cincom-jr-xmla.jar=D:\\aaaSuite\\lib\\cincom-jr-xmla.jar
@@ -41,33 +39,23 @@ file.reference.comm.jar=D:\\aaaSuite\\lib\\comm.jar
 file.reference.commons-beanutils-bean-collections.jar=D:\\aaaSuite\\lib\\commons-beanutils-bean-collections.jar
 file.reference.commons-beanutils-core.jar=D:\\aaaSuite\\lib\\commons-beanutils-core.jar
 file.reference.commons-beanutils.jar=D:\\aaaSuite\\lib\\commons-beanutils.jar
-file.reference.commons-beanutils.jar-1=../olaplib/commons-beanutils.jar
-file.reference.commons-collections-3.1.jar=../olaplib/commons-collections-3.1.jar
 file.reference.commons-collections-3.2.jar=D:\\aaaSuite\\lib\\commons-collections-3.2.jar
 file.reference.commons-collections-testframework-3.2.jar=D:\\aaaSuite\\lib\\commons-collections-testframework-3.2.jar
-file.reference.commons-configuration-1.1.jar=../olaplib/commons-configuration-1.1.jar
 file.reference.commons-dbcp-1.2.1.jar=D:\\aaaSuite\\lib\\commons-dbcp-1.2.1.jar
-file.reference.commons-digester-1.7.jar=../olaplib/commons-digester-1.7.jar
 file.reference.commons-digester-1.8.jar=D:\\aaaSuite\\lib\\commons-digester-1.8.jar
 file.reference.commons-javaflow-20060411.jar=D:\\aaaSuite\\lib\\commons-javaflow-20060411.jar
-file.reference.commons-lang-2.1.jar=../olaplib/commons-lang-2.1.jar
-file.reference.commons-lang-exception-2.0.jar=../olaplib/commons-lang-exception-2.0.jar
 file.reference.commons-logging-1.1.jar=D:\\aaaSuite\\lib\\commons-logging-1.1.jar
 file.reference.commons-logging-adapters-1.1.jar=D:\\aaaSuite\\lib\\commons-logging-adapters-1.1.jar
 file.reference.commons-logging-api-1.1.jar=D:\\aaaSuite\\lib\\commons-logging-api-1.1.jar
-file.reference.commons-logging-api.jar=../olaplib/commons-logging-api.jar
 file.reference.commons-math-1.0.jar=D:\\aaaSuite\\lib\\commons-math-1.0.jar
 file.reference.commons-pool-1.3.jar=D:\\aaaSuite\\lib\\commons-pool-1.3.jar
 file.reference.commons-validator-1.3.1.jar=D:\\aaaSuite\\lib\\commons-validator-1.3.1.jar
 file.reference.commons-vfs-1.0.jar=D:\\aaaSuite\\lib\\commons-vfs-1.0.jar
-file.reference.commons-vfs.jar=../olaplib/commons-vfs.jar
 file.reference.Connex.jar=D:\\aaaSuite\\lib\\Connex.jar
 file.reference.customizer.jar=D:\\aaaSuite\\lib\\customizer.jar
 file.reference.databinding-0.8.0.jar=D:\\aaaSuite\\lib\\databinding-0.8.0.jar
 file.reference.derby.jar=D:\\aaaSuite\\lib\\derby.jar
 file.reference.derbyclient.jar=D:\\aaaSuite\\lib\\derbyclient.jar
-file.reference.dom3-xercesImpl.jar=../olaplib/dom3-xercesImpl.jar
-file.reference.dom3-xmlParserAPIs.jar=../olaplib/dom3-xmlParserAPIs.jar
 file.reference.dom4j-1.6.jar=D:\\aaaSuite\\lib\\dom4j-1.6.jar
 file.reference.dom4j.jar=D:\\aaaSuite\\lib\\dom4j.jar
 file.reference.dsn.jar=D:\\aaaSuite\\lib\\dsn.jar
@@ -77,9 +65,9 @@ file.reference.ehcache-1.1.jar=D:\\aaaSuite\\lib\\ehcache-1.1.jar
 file.reference.eigenbase-properties.jar=D:\\aaaSuite\\lib\\eigenbase-properties.jar
 file.reference.eigenbase-resgen.jar=D:\\aaaSuite\\lib\\eigenbase-resgen.jar
 file.reference.eigenbase-xom.jar=D:\\aaaSuite\\lib\\eigenbase-xom.jar
-file.reference.ejb.jar=../olaplib/ejb.jar
 file.reference.ejb3-persistence.jar=D:\\aaaSuite\\lib\\ejb3-persistence.jar
 file.reference.FileSharing.jar=D:\\aaaSuite\\lib\\FileSharing.jar
+file.reference.Filters.jar=D:\\aaaSuite\\lib\\Filters.jar
 file.reference.flexdock-0.4.1.jar=D:\\aaaSuite\\lib\\flexdock-0.4.1.jar
 file.reference.freemarker.jar=D:\\aaaSuite\\lib\\freemarker.jar
 file.reference.gant-0.3.1.jar=D:\\aaaSuite\\lib\\gant-0.3.1.jar
@@ -88,13 +76,10 @@ file.reference.groovy-1.0.jar=D:\\aaaSuite\\lib\\groovy-1.0.jar
 file.reference.groovy-all-1.0.jar=D:\\aaaSuite\\lib\\groovy-all-1.0.jar
 file.reference.imap.jar=D:\\aaaSuite\\lib\\imap.jar
 file.reference.iReport.jar=D:\\aaaSuite\\lib\\iReport.jar
-file.reference.isorelax.jar=../olaplib/isorelax.jar
 file.reference.itext-1.3.1.jar=D:\\aaaSuite\\lib\\itext-1.3.1.jar
-file.reference.itext-1.3.5.jar=../olaplib/itext-1.3.5.jar
 file.reference.jakarta-bcel-20050813.jar=D:\\aaaSuite\\lib\\jakarta-bcel-20050813.jar
 file.reference.jakarta-oro-2.0.8.jar=D:\\aaaSuite\\lib\\jakarta-oro-2.0.8.jar
 file.reference.JasperBabylon-1.0.0.jar=D:\\aaaSuite\\lib\\JasperBabylon-1.0.0.jar
-file.reference.jasperreports-1.1.0.jar=../olaplib/jasperreports-1.1.0.jar
 file.reference.jasperreports-2.0.2.jar=D:\\aaaSuite\\lib\\jasperreports-2.0.2.jar
 file.reference.jasperreports-extensions-1.3.1.jar=D:\\aaaSuite\\lib\\jasperreports-extensions-1.3.1.jar
 file.reference.javacup.jar=D:\\aaaSuite\\lib\\javacup.jar
@@ -103,29 +88,23 @@ file.reference.jaxb-api.jar=D:\\aaaSuite\\lib\\jaxb-api.jar
 file.reference.jaxb-impl.jar=D:\\aaaSuite\\lib\\jaxb-impl.jar
 file.reference.jaxb-xjc.jar=D:\\aaaSuite\\lib\\jaxb-xjc.jar
 file.reference.jaxen-1.1.1.jar=D:\\aaaSuite\\lib\\jaxen-1.1.1.jar
-file.reference.jaxen-core.jar=../olaplib/jaxen-core.jar
-file.reference.jaxen-dom.jar=../olaplib/jaxen-dom.jar
 file.reference.jaxws-api.jar=D:\\aaaSuite\\lib\\jaxws-api.jar
 file.reference.jaxws-rt.jar=D:\\aaaSuite\\lib\\jaxws-rt.jar
 file.reference.jaxws-tools.jar=D:\\aaaSuite\\lib\\jaxws-tools.jar
 file.reference.jcalendar.jar=D:\\aaaSuite\\lib\\jcalendar.jar
 file.reference.jcmdline-1.0.2.jar=D:\\aaaSuite\\lib\\jcmdline-1.0.2.jar
-file.reference.jcommon-1.0.0.jar=../olaplib/jcommon-1.0.0.jar
 file.reference.jcommon-1.0.8.jar=D:\\aaaSuite\\lib\\jcommon-1.0.8.jar
-file.reference.jcommon-xml-1.0.0.jar=../olaplib/jcommon-xml-1.0.0.jar
 file.reference.jdic.jar=D:\\aaaSuite\\lib\\jdic.jar
 file.reference.jdnc-jxcombobox.jar=D:\\aaaSuite\\lib\\jdnc-jxcombobox.jar
-file.reference.jdom.jar=../olaplib/jdom.jar
 file.reference.jdt-compiler-3.1.1.jar=D:\\aaaSuite\\lib\\jdt-compiler-3.1.1.jar
 file.reference.jfreechart-1.0.0.jar=D:\\aaaSuite\\lib\\jfreechart-1.0.0.jar
-file.reference.jfreechart-1.0.0.jar-1=../olaplib/jfreechart-1.0.0.jar
 file.reference.jh.jar=D:\\aaaSuite\\lib\\jh.jar
 file.reference.jhall.jar=D:\\aaaSuite\\lib\\jhall.jar
 file.reference.jhbasic.jar=D:\\aaaSuite\\lib\\jhbasic.jar
 file.reference.jhelpdev.jar=D:\\aaaSuite\\lib\\jhelpdev.jar
 file.reference.jhindexer.jar=D:\\aaaSuite\\lib\\jhindexer.jar
 file.reference.jhsearch.jar=D:\\aaaSuite\\lib\\jhsearch.jar
-file.reference.jmagallanes.jar=../olaplib/jmagallanes.jar
+file.reference.jmagallanes.jar=D:\\aaaSuite\\olaplib\\jmagallanes.jar
 file.reference.jmf.jar=D:\\aaaSuite\\lib\\jmf.jar
 file.reference.jpa.jar=D:\\aaaSuite\\lib\\jpa.jar
 file.reference.jsearch.jar=D:\\aaaSuite\\lib\\jsearch.jar
@@ -136,18 +115,13 @@ file.reference.jsr181-api.jar=D:\\aaaSuite\\lib\\jsr181-api.jar
 file.reference.jsr250-api.jar=D:\\aaaSuite\\lib\\jsr250-api.jar
 file.reference.jta.jar=D:\\aaaSuite\\lib\\jta.jar
 file.reference.jtds-1.2.jar=D:\\aaaSuite\\lib\\jtds-1.2.jar
-file.reference.jtds-1.2.jar-1=../olaplib/jtds-1.2.jar
-file.reference.juh.jar=../olaplib/juh.jar
 file.reference.junit-4.1.jar=D:\\aaaSuite\\lib\\junit-4.1.jar
 file.reference.junit.jar=D:\\aaaSuite\\lib\\junit.jar
-file.reference.junit.jar-1=../olaplib/junit.jar
 file.reference.jxl-2.6.jar=D:\\aaaSuite\\lib\\jxl-2.6.jar
 file.reference.jxta.jar=D:\\aaaSuite\\lib\\jxta.jar
 file.reference.jxtacms.jar=D:\\aaaSuite\\lib\\jxtacms.jar
 file.reference.jxtaext.jar=D:\\aaaSuite\\lib\\jxtaext.jar
-file.reference.log4j-1.2.12.jar=../olaplib/log4j-1.2.12.jar
 file.reference.log4j-1.2.9.jar=D:\\aaaSuite\\lib\\log4j-1.2.9.jar
-file.reference.log4j-core.jar=../olaplib/log4j-core.jar
 file.reference.log4j.jar=D:\\aaaSuite\\lib\\log4j.jar
 file.reference.looks-2.0-rc.jar=D:\\aaaSuite\\lib\\looks-2.0-rc.jar
 file.reference.mail.jar=D:\\aaaSuite\\lib\\mail.jar
@@ -155,24 +129,16 @@ file.reference.mailapi.jar=D:\\aaaSuite\\lib\\mailapi.jar
 file.reference.mediaplayer.jar=D:\\aaaSuite\\lib\\mediaplayer.jar
 file.reference.Messanger.jar=D:\\aaaSuite\\lib\\Messanger.jar
 file.reference.microba-0.4.1-bin.jar=D:\\aaaSuite\\lib\\microba-0.4.1-bin.jar
-file.reference.msv-20031002.jar=../olaplib/msv-20031002.jar
 file.reference.multiplayer.jar=D:\\aaaSuite\\lib\\multiplayer.jar
 file.reference.mysql-connector-java-5.0.4-bin.jar=D:\\aaaSuite\\lib\\mysql-connector-java-5.0.4-bin.jar
 file.reference.mysql-connector-java-5.1.5-bin.jar=D:\\aaaSuite\\lib\\mysql-connector-java-5.1.5-bin.jar
-file.reference.mysql-connector-java-5.1.5-bin.jar-1=../olaplib/mysql-connector-java-5.1.5-bin.jar
 file.reference.nsisant-1.1.jar=D:\\aaaSuite\\lib\\nsisant-1.1.jar
 file.reference.png-encoder-1.5.jar=D:\\aaaSuite\\lib\\png-encoder-1.5.jar
-file.reference.poi-2.5.1-final-20040804.jar=../olaplib/poi-2.5.1-final-20040804.jar
 file.reference.poi-3.0.1-FINAL-20070705.jar=D:\\aaaSuite\\lib\\poi-3.0.1-FINAL-20070705.jar
-file.reference.Pollo.jar=../olaplib/Pollo.jar
-file.reference.PolloStartup.jar=../olaplib/PolloStartup.jar
 file.reference.pop3.jar=D:\\aaaSuite\\lib\\pop3.jar
 file.reference.proguard.jar=D:\\aaaSuite\\lib\\proguard.jar
-file.reference.relaxngDatatype.jar=../olaplib/relaxngDatatype.jar
 file.reference.rex-20070125.jar=D:\\aaaSuite\\lib\\rex-20070125.jar
-file.reference.ridl.jar=../olaplib/ridl.jar
 file.reference.saaj-api-1.3.jar=D:\\aaaSuite\\lib\\saaj-api-1.3.jar
-file.reference.saxpath.jar=../olaplib/saxpath.jar
 file.reference.servlet-api.jar=D:\\aaaSuite\\lib\\servlet-api.jar
 file.reference.servlet.jar=D:\\aaaSuite\\lib\\servlet.jar
 file.reference.slf4j-api.jar=D:\\aaaSuite\\lib\\slf4j-api.jar
@@ -191,15 +157,10 @@ file.reference.tinylaf.jar=D:\\aaaSuite\\lib\\tinylaf.jar
 file.reference.toniclf.jar=D:\\aaaSuite\\lib\\toniclf.jar
 file.reference.toplink-essentials-agent.jar=D:\\aaaSuite\\lib\\toplink-essentials-agent.jar
 file.reference.toplink-essentials.jar=D:\\aaaSuite\\lib\\toplink-essentials.jar
-file.reference.unoil.jar=../olaplib/unoil.jar
 file.reference.xalan.jar=D:\\aaaSuite\\lib\\xalan.jar
 file.reference.xercesImpl.jar=D:\\aaaSuite\\lib\\xercesImpl.jar
-file.reference.xercesImpl.jar-1=../olaplib/xercesImpl.jar
 file.reference.xml-apis.jar=D:\\aaaSuite\\lib\\xml-apis.jar
-file.reference.xml-apis.jar-1=../olaplib/xml-apis.jar
 file.reference.xmlenc.jar=D:\\aaaSuite\\lib\\xmlenc.jar
-file.reference.xpp3-1.1.3.4-RC3_min.jar=../olaplib/xpp3-1.1.3.4-RC3_min.jar
-file.reference.xsdlib.jar=../olaplib/xsdlib.jar
 file.reference.xstream-1.2.jar=D:\\aaaSuite\\lib\\xstream-1.2.jar
 includes=**
 jar.compress=false
@@ -255,6 +216,7 @@ javac.classpath=\
     ${file.reference.eigenbase-xom.jar}:\
     ${file.reference.ejb3-persistence.jar}:\
     ${file.reference.FileSharing.jar}:\
+    ${file.reference.Filters.jar}:\
     ${file.reference.flexdock-0.4.1.jar}:\
     ${file.reference.freemarker.jar}:\
     ${file.reference.gant-0.3.1.jar}:\
@@ -348,51 +310,11 @@ javac.classpath=\
     ${file.reference.xml-apis.jar}:\
     ${file.reference.xmlenc.jar}:\
     ${file.reference.xstream-1.2.jar}:\
-    ${file.reference.jmagallanes.jar}:\
-    ${file.reference.avalon-configuration.jar}:\
-    ${file.reference.castor-0.9.9.1-xml.jar}:\
-    ${file.reference.commons-beanutils.jar-1}:\
-    ${file.reference.commons-collections-3.1.jar}:\
-    ${file.reference.commons-configuration-1.1.jar}:\
-    ${file.reference.commons-digester-1.7.jar}:\
-    ${file.reference.commons-lang-2.1.jar}:\
-    ${file.reference.commons-lang-exception-2.0.jar}:\
-    ${file.reference.commons-logging-api.jar}:\
-    ${file.reference.commons-vfs.jar}:\
-    ${file.reference.dom3-xercesImpl.jar}:\
-    ${file.reference.dom3-xmlParserAPIs.jar}:\
-    ${file.reference.ejb.jar}:\
-    ${file.reference.isorelax.jar}:\
-    ${file.reference.itext-1.3.5.jar}:\
-    ${file.reference.jasperreports-1.1.0.jar}:\
-    ${file.reference.jaxen-core.jar}:\
-    ${file.reference.jaxen-dom.jar}:\
-    ${file.reference.jcommon-1.0.0.jar}:\
-    ${file.reference.jcommon-xml-1.0.0.jar}:\
-    ${file.reference.jdom.jar}:\
-    ${file.reference.jfreechart-1.0.0.jar-1}:\
-    ${file.reference.jtds-1.2.jar-1}:\
-    ${file.reference.juh.jar}:\
-    ${file.reference.junit.jar-1}:\
-    ${file.reference.log4j-1.2.12.jar}:\
-    ${file.reference.log4j-core.jar}:\
-    ${file.reference.msv-20031002.jar}:\
-    ${file.reference.mysql-connector-java-5.1.5-bin.jar-1}:\
-    ${file.reference.poi-2.5.1-final-20040804.jar}:\
-    ${file.reference.Pollo.jar}:\
-    ${file.reference.PolloStartup.jar}:\
-    ${file.reference.relaxngDatatype.jar}:\
-    ${file.reference.ridl.jar}:\
-    ${file.reference.saxpath.jar}:\
-    ${file.reference.unoil.jar}:\
-    ${file.reference.xercesImpl.jar-1}:\
-    ${file.reference.xml-apis.jar-1}:\
-    ${file.reference.xpp3-1.1.3.4-RC3_min.jar}:\
-    ${file.reference.xsdlib.jar}
+    ${file.reference.jmagallanes.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=-Xlint:unchecked
 javac.deprecation=false
-javac.source=1.5
+javac.source=1.6
 javac.target=1.6
 javac.test.classpath=\
     ${javac.classpath}:\
@@ -412,7 +334,7 @@ javadoc.version=false
 javadoc.windowtitle=
 jnlp.codebase.type=user
 jnlp.codebase.user=http://server:8080/schoolService
-jnlp.enabled=true
+jnlp.enabled=false
 jnlp.offline-allowed=true
 jnlp.signed=true
 main.class=school2.Main
