--- a/cargo2/nbproject/private/private.properties
+++ b/cargo2/nbproject/private/private.properties
@@ -1,2 +1,7 @@
-jaxws.endorsed.dir=C:\\Program Files\\NetBeans 6.1\\java2\\modules\\ext\\jaxws21\\api
-user.properties.file=C:\\Documents and Settings\\Charliemagne\\.netbeans\\6.1\\build.properties
+compile.on.save=false
+do.depend=false
+do.jar=true
+javac.debug=true
+javadoc.preview=true
+jaxbwiz.endorsed.dirs=C:\\Program Files\\NetBeans 6.8\\ide12\\modules\\ext\\jaxb\\api
+user.properties.file=C:\\Documents and Settings\\Administrator\\.netbeans\\6.8\\build.properties
