--- a/school2/.project
+++ b/school2/.project
@@ -18,7 +18,7 @@
 		<link>
 			<name>srcCommon</name>
 			<type>2</type>
-			<location>C:/aaaSuite/common2/src</location>
+			<location>D:/aaaSuite/common2/src</location>
 		</link>
 	</linkedResources>
 </projectDescription>
