--- a/school2/nbproject/configs/JWS_generated.properties
+++ b/school2/nbproject/configs/JWS_generated.properties
@@ -1,2 +1,4 @@
-#Tue Feb 09 21:36:45 CST 2010
 $label=Web Start
+$target.debug=jws-debug
+$target.run=jws-run
+compile.on.save.unsupported.javawebstart=true
