--- a/school2/nbproject/private/private.properties
+++ b/school2/nbproject/private/private.properties
@@ -3,5 +3,5 @@ do.depend=false
 do.jar=true
 javac.debug=true
 javadoc.preview=true
-jaxws.endorsed.dir=C:\\Program Files\\NetBeans 6.1\\java2\\modules\\ext\\jaxws21\\api
-user.properties.file=C:\\Documents and Settings\\Charliemagne\\.netbeans\\6.1\\build.properties
+jaxbwiz.endorsed.dirs=C:\\Program Files\\NetBeans 6.8\\ide12\\modules\\ext\\jaxb\\api
+user.properties.file=C:\\Documents and Settings\\Administrator\\.netbeans\\6.8\\build.properties
