--- a/school2/.classpath
+++ b/school2/.classpath
@@ -3,149 +3,107 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="srcCommon"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="D:/aaaSuite/lib/xstream-1.2.jar"/>
-	<classpathentry kind="lib" path="D:/aaaSuite/lib/ant-1.6.5.jar"/>
-	<classpathentry kind="lib" path="D:/aaaSuite/lib/antlr-2.7.5.jar"/>
-	<classpathentry kind="lib" path="D:/aaaSuite/lib/appframework-0.50.jar"/>
-	<classpathentry kind="lib" path="D:/aaaSuite/lib/appframework-1.0.3.jar"/>
-	<classpathentry kind="lib" path="D:/aaaSuite/lib/asm-2.2.jar"/>
-	<classpathentry kind="lib" path="D:/aaaSuite/lib/asm-analysis-2.2.jar"/>
-	<classpathentry kind="lib" path="D:/aaaSuite/lib/asm-attrs-2.2.jar"/>
-	<classpathentry kind="lib" path="D:/aaaSuite/lib/asm-tree-2.2.jar"/>
-	<classpathentry kind="lib" path="D:/aaaSuite/lib/asm-util-2.2.jar"/>
-	<classpathentry kind="lib" path="D:/aaaSuite/lib/barbecue-1.1.jar"/>
-	<classpathentry kind="lib" path="D:/aaaSuite/lib/bcprov-jdk14.jar"/>
-	<classpathentry kind="lib" path="D:/aaaSuite/lib/beansbinding-0.6.1.jar"/>
-	<classpathentry kind="lib" path="D:/aaaSuite/lib/beansbinding-1.2.1.jar"/>
-	<classpathentry kind="lib" path="D:/aaaSuite/lib/bsh-2.0b4.jar"/>
-	<classpathentry kind="lib" path="D:/aaaSuite/lib/cglib-2.1.jar"/>
-	<classpathentry kind="lib" path="D:/aaaSuite/lib/chat.jar"/>
-	<classpathentry kind="lib" path="D:/aaaSuite/lib/cincom-jr-xmla.jar"/>
-	<classpathentry kind="lib" path="D:/aaaSuite/lib/comm.jar"/>
-	<classpathentry kind="lib" path="D:/aaaSuite/lib/commons-beanutils.jar"/>
-	<classpathentry kind="lib" path="D:/aaaSuite/lib/commons-beanutils-bean-collections.jar"/>
-	<classpathentry kind="lib" path="D:/aaaSuite/lib/commons-beanutils-core.jar"/>
-	<classpathentry kind="lib" path="D:/aaaSuite/lib/commons-collections-3.2.jar"/>
-	<classpathentry kind="lib" path="D:/aaaSuite/lib/commons-collections-testframework-3.2.jar"/>
-	<classpathentry kind="lib" path="D:/aaaSuite/lib/commons-dbcp-1.2.1.jar"/>
-	<classpathentry kind="lib" path="D:/aaaSuite/lib/commons-digester-1.8.jar"/>
-	<classpathentry kind="lib" path="D:/aaaSuite/lib/commons-javaflow-20060411.jar"/>
-	<classpathentry kind="lib" path="D:/aaaSuite/lib/commons-logging-1.1.jar"/>
-	<classpathentry kind="lib" path="D:/aaaSuite/lib/commons-logging-adapters-1.1.jar"/>
-	<classpathentry kind="lib" path="D:/aaaSuite/lib/commons-logging-api-1.1.jar"/>
-	<classpathentry kind="lib" path="D:/aaaSuite/lib/commons-math-1.0.jar"/>
-	<classpathentry kind="lib" path="D:/aaaSuite/lib/commons-pool-1.3.jar"/>
-	<classpathentry kind="lib" path="D:/aaaSuite/lib/commons-validator-1.3.1.jar"/>
-	<classpathentry kind="lib" path="D:/aaaSuite/lib/commons-vfs-1.0.jar"/>
-	<classpathentry kind="lib" path="D:/aaaSuite/lib/Connex.jar"/>
-	<classpathentry kind="lib" path="D:/aaaSuite/lib/customizer.jar"/>
-	<classpathentry kind="lib" path="D:/aaaSuite/lib/databinding-0.8.0.jar"/>
-	<classpathentry kind="lib" path="D:/aaaSuite/lib/derby.jar"/>
-	<classpathentry kind="lib" path="D:/aaaSuite/lib/derbyclient.jar"/>
-	<classpathentry kind="lib" path="D:/aaaSuite/lib/dom4j-1.6.jar"/>
-	<classpathentry kind="lib" path="D:/aaaSuite/lib/dom4j.jar"/>
-	<classpathentry kind="lib" path="D:/aaaSuite/lib/dsn.jar"/>
-	<classpathentry kind="lib" path="D:/aaaSuite/lib/DynamicJasper-2.0.10.jar"/>
-	<classpathentry kind="lib" path="D:/aaaSuite/lib/DynamicJasper-2.0.10-tests.jar"/>
-	<classpathentry kind="lib" path="D:/aaaSuite/lib/ehcache-1.1.jar"/>
-	<classpathentry kind="lib" path="D:/aaaSuite/lib/eigenbase-properties.jar"/>
-	<classpathentry kind="lib" path="D:/aaaSuite/lib/eigenbase-resgen.jar"/>
-	<classpathentry kind="lib" path="D:/aaaSuite/lib/eigenbase-xom.jar"/>
-	<classpathentry kind="lib" path="D:/aaaSuite/lib/ejb3-persistence.jar"/>
-	<classpathentry kind="lib" path="D:/aaaSuite/lib/FileSharing.jar"/>
-	<classpathentry kind="lib" path="D:/aaaSuite/lib/Filters.jar"/>
-	<classpathentry kind="lib" path="D:/aaaSuite/lib/flexdock-0.4.1.jar"/>
-	<classpathentry kind="lib" path="D:/aaaSuite/lib/freemarker.jar"/>
-	<classpathentry kind="lib" path="D:/aaaSuite/lib/gant-0.3.1.jar"/>
-	<classpathentry kind="lib" path="D:/aaaSuite/lib/glazedlists-1.7.0_java15.jar"/>
-	<classpathentry kind="lib" path="D:/aaaSuite/lib/groovy-1.0.jar"/>
-	<classpathentry kind="lib" path="D:/aaaSuite/lib/groovy-all-1.0.jar"/>
-	<classpathentry kind="lib" path="D:/aaaSuite/lib/imap.jar"/>
-	<classpathentry kind="lib" path="D:/aaaSuite/lib/iReport.jar"/>
-	<classpathentry kind="lib" path="D:/aaaSuite/lib/itext-1.3.1.jar"/>
-	<classpathentry kind="lib" path="D:/aaaSuite/lib/jakarta-bcel-20050813.jar"/>
-	<classpathentry kind="lib" path="D:/aaaSuite/lib/jakarta-oro-2.0.8.jar"/>
-	<classpathentry kind="lib" path="D:/aaaSuite/lib/JasperBabylon-1.0.0.jar"/>
-	<classpathentry kind="lib" path="D:/aaaSuite/lib/jasperreports-2.0.2.jar"/>
-	<classpathentry kind="lib" path="D:/aaaSuite/lib/jasperreports-extensions-1.3.1.jar"/>
-	<classpathentry kind="lib" path="D:/aaaSuite/lib/javacup.jar"/>
-	<classpathentry kind="lib" path="D:/aaaSuite/lib/javassist.jar"/>
-	<classpathentry kind="lib" path="D:/aaaSuite/lib/jaxb-api.jar"/>
-	<classpathentry kind="lib" path="D:/aaaSuite/lib/jaxb-impl.jar"/>
-	<classpathentry kind="lib" path="D:/aaaSuite/lib/jaxb-xjc.jar"/>
-	<classpathentry kind="lib" path="D:/aaaSuite/lib/jaxen-1.1.1.jar"/>
-	<classpathentry kind="lib" path="D:/aaaSuite/lib/jaxws-api.jar"/>
-	<classpathentry kind="lib" path="D:/aaaSuite/lib/jaxws-rt.jar"/>
-	<classpathentry kind="lib" path="D:/aaaSuite/lib/jaxws-tools.jar"/>
-	<classpathentry kind="lib" path="D:/aaaSuite/lib/jcalendar.jar"/>
-	<classpathentry kind="lib" path="D:/aaaSuite/lib/jcmdline-1.0.2.jar"/>
-	<classpathentry kind="lib" path="D:/aaaSuite/lib/jcommon-1.0.8.jar"/>
-	<classpathentry kind="lib" path="D:/aaaSuite/lib/jdic.jar"/>
-	<classpathentry kind="lib" path="D:/aaaSuite/lib/jdnc-jxcombobox.jar"/>
-	<classpathentry kind="lib" path="D:/aaaSuite/lib/jdt-compiler-3.1.1.jar"/>
-	<classpathentry kind="lib" path="D:/aaaSuite/lib/jfreechart-1.0.0.jar"/>
-	<classpathentry kind="lib" path="D:/aaaSuite/lib/jh.jar"/>
-	<classpathentry kind="lib" path="D:/aaaSuite/lib/jhall.jar"/>
-	<classpathentry kind="lib" path="D:/aaaSuite/lib/jhbasic.jar"/>
-	<classpathentry kind="lib" path="D:/aaaSuite/lib/jhelpdev.jar"/>
-	<classpathentry kind="lib" path="D:/aaaSuite/lib/jhindexer.jar"/>
-	<classpathentry kind="lib" path="D:/aaaSuite/lib/jhsearch.jar"/>
-	<classpathentry kind="lib" path="D:/aaaSuite/lib/jmf.jar"/>
-	<classpathentry kind="lib" path="D:/aaaSuite/lib/jpa.jar"/>
-	<classpathentry kind="lib" path="D:/aaaSuite/lib/jsearch.jar"/>
-	<classpathentry kind="lib" path="D:/aaaSuite/lib/jsmoothgen-ant-0.9.7.jar"/>
-	<classpathentry kind="lib" path="D:/aaaSuite/lib/json-lib-2.2.3-jdk15.jar"/>
-	<classpathentry kind="lib" path="D:/aaaSuite/lib/jsr173_api.jar"/>
-	<classpathentry kind="lib" path="D:/aaaSuite/lib/jsr181-api.jar"/>
-	<classpathentry kind="lib" path="D:/aaaSuite/lib/jsr250-api.jar"/>
-	<classpathentry kind="lib" path="D:/aaaSuite/lib/jta.jar"/>
-	<classpathentry kind="lib" path="D:/aaaSuite/lib/jtds-1.2.jar"/>
-	<classpathentry kind="lib" path="D:/aaaSuite/lib/junit-4.1.jar"/>
-	<classpathentry kind="lib" path="D:/aaaSuite/lib/junit.jar"/>
-	<classpathentry kind="lib" path="D:/aaaSuite/lib/jxl-2.6.jar"/>
-	<classpathentry kind="lib" path="D:/aaaSuite/lib/jxta.jar"/>
-	<classpathentry kind="lib" path="D:/aaaSuite/lib/jxtacms.jar"/>
-	<classpathentry kind="lib" path="D:/aaaSuite/lib/jxtaext.jar"/>
-	<classpathentry kind="lib" path="D:/aaaSuite/lib/log4j-1.2.9.jar"/>
-	<classpathentry kind="lib" path="D:/aaaSuite/lib/log4j.jar"/>
-	<classpathentry kind="lib" path="D:/aaaSuite/lib/looks-2.0-rc.jar"/>
-	<classpathentry kind="lib" path="D:/aaaSuite/lib/mail.jar"/>
-	<classpathentry kind="lib" path="D:/aaaSuite/lib/mailapi.jar"/>
-	<classpathentry kind="lib" path="D:/aaaSuite/lib/mediaplayer.jar"/>
-	<classpathentry kind="lib" path="D:/aaaSuite/lib/Messanger.jar"/>
-	<classpathentry kind="lib" path="D:/aaaSuite/lib/microba-0.4.1-bin.jar"/>
-	<classpathentry kind="lib" path="D:/aaaSuite/lib/multiplayer.jar"/>
-	<classpathentry kind="lib" path="D:/aaaSuite/lib/mysql-connector-java-5.0.4-bin.jar"/>
-	<classpathentry kind="lib" path="D:/aaaSuite/lib/mysql-connector-java-5.1.5-bin.jar"/>
-	<classpathentry kind="lib" path="D:/aaaSuite/lib/nsisant-1.1.jar"/>
-	<classpathentry kind="lib" path="D:/aaaSuite/lib/png-encoder-1.5.jar"/>
-	<classpathentry kind="lib" path="D:/aaaSuite/lib/poi-3.0.1-FINAL-20070705.jar"/>
-	<classpathentry kind="lib" path="D:/aaaSuite/lib/pop3.jar"/>
-	<classpathentry kind="lib" path="D:/aaaSuite/lib/proguard.jar"/>
-	<classpathentry kind="lib" path="D:/aaaSuite/lib/rex-20070125.jar"/>
-	<classpathentry kind="lib" path="D:/aaaSuite/lib/saaj-api-1.3.jar"/>
-	<classpathentry kind="lib" path="D:/aaaSuite/lib/servlet.jar"/>
-	<classpathentry kind="lib" path="D:/aaaSuite/lib/servlet-api.jar"/>
-	<classpathentry kind="lib" path="D:/aaaSuite/lib/slf4j-api.jar"/>
-	<classpathentry kind="lib" path="D:/aaaSuite/lib/smack.jar"/>
-	<classpathentry kind="lib" path="D:/aaaSuite/lib/smackx.jar"/>
-	<classpathentry kind="lib" path="D:/aaaSuite/lib/smackx-jingle.jar"/>
-	<classpathentry kind="lib" path="D:/aaaSuite/lib/smtp.jar"/>
-	<classpathentry kind="lib" path="D:/aaaSuite/lib/sound.jar"/>
-	<classpathentry kind="lib" path="D:/aaaSuite/lib/spring-2.0-m2.jar"/>
-	<classpathentry kind="lib" path="D:/aaaSuite/lib/spring-2.5.jar"/>
-	<classpathentry kind="lib" path="D:/aaaSuite/lib/spring.jar"/>
-	<classpathentry kind="lib" path="D:/aaaSuite/lib/spring-context-2.0-m2.jar"/>
-	<classpathentry kind="lib" path="D:/aaaSuite/lib/swing-layout-1.0.3.jar"/>
-	<classpathentry kind="lib" path="D:/aaaSuite/lib/swing-worker-1.1.jar"/>
-	<classpathentry kind="lib" path="D:/aaaSuite/lib/tinylaf.jar"/>
-	<classpathentry kind="lib" path="D:/aaaSuite/lib/toniclf.jar"/>
-	<classpathentry kind="lib" path="D:/aaaSuite/lib/toplink-essentials.jar"/>
-	<classpathentry kind="lib" path="D:/aaaSuite/lib/toplink-essentials-agent.jar"/>
-	<classpathentry kind="lib" path="D:/aaaSuite/lib/xalan.jar"/>
-	<classpathentry kind="lib" path="D:/aaaSuite/lib/xercesImpl.jar"/>
-	<classpathentry kind="lib" path="D:/aaaSuite/lib/xml-apis.jar"/>
-	<classpathentry kind="lib" path="D:/aaaSuite/lib/xmlenc.jar"/>
-	<classpathentry kind="lib" path="D:/aaaSuite/olaplib/jmagallanes.jar"/>
+	<classpathentry kind="lib" path="D:/aaaSuite/lib6.8/ant-1.6.5.jar"/>
+	<classpathentry kind="lib" path="D:/aaaSuite/lib6.8/antlr-2.7.5.jar"/>
+	<classpathentry kind="lib" path="D:/aaaSuite/lib6.8/appframework-1.0.3.jar"/>
+	<classpathentry kind="lib" path="D:/aaaSuite/lib6.8/avalon-configuration.jar"/>
+	<classpathentry kind="lib" path="D:/aaaSuite/lib6.8/barbecue-1.1.jar"/>
+	<classpathentry kind="lib" path="D:/aaaSuite/lib6.8/bcprov-jdk14.jar"/>
+	<classpathentry kind="lib" path="D:/aaaSuite/lib6.8/beansbinding-1.2.1.jar"/>
+	<classpathentry kind="lib" path="D:/aaaSuite/lib6.8/bsh-2.0b4.jar"/>
+	<classpathentry kind="lib" path="D:/aaaSuite/lib6.8/cglib-2.2.jar"/>
+	<classpathentry kind="lib" path="D:/aaaSuite/lib6.8/comm.jar"/>
+	<classpathentry kind="lib" path="D:/aaaSuite/lib6.8/commons-beanutils.jar"/>
+	<classpathentry kind="lib" path="D:/aaaSuite/lib6.8/commons-beanutils-bean-collections.jar"/>
+	<classpathentry kind="lib" path="D:/aaaSuite/lib6.8/commons-beanutils-core.jar"/>
+	<classpathentry kind="lib" path="D:/aaaSuite/lib6.8/commons-collections-3.2.jar"/>
+	<classpathentry kind="lib" path="D:/aaaSuite/lib6.8/commons-collections-testframework-3.2.jar"/>
+	<classpathentry kind="lib" path="D:/aaaSuite/lib6.8/commons-configuration-1.1.jar"/>
+	<classpathentry kind="lib" path="D:/aaaSuite/lib6.8/commons-dbcp-1.2.1.jar"/>
+	<classpathentry kind="lib" path="D:/aaaSuite/lib6.8/commons-digester-1.8.jar"/>
+	<classpathentry kind="lib" path="D:/aaaSuite/lib6.8/commons-javaflow-20060411.jar"/>
+	<classpathentry kind="lib" path="D:/aaaSuite/lib6.8/commons-lang-2.1.jar"/>
+	<classpathentry kind="lib" path="D:/aaaSuite/lib6.8/commons-lang-exception-2.0.jar"/>
+	<classpathentry kind="lib" path="D:/aaaSuite/lib6.8/commons-logging-1.1.jar"/>
+	<classpathentry kind="lib" path="D:/aaaSuite/lib6.8/commons-logging-adapters-1.1.jar"/>
+	<classpathentry kind="lib" path="D:/aaaSuite/lib6.8/commons-logging-api.jar"/>
+	<classpathentry kind="lib" path="D:/aaaSuite/lib6.8/commons-math-1.0.jar"/>
+	<classpathentry kind="lib" path="D:/aaaSuite/lib6.8/commons-pool-1.3.jar"/>
+	<classpathentry kind="lib" path="D:/aaaSuite/lib6.8/commons-validator-1.3.1.jar"/>
+	<classpathentry kind="lib" path="D:/aaaSuite/lib6.8/commons-vfs.jar"/>
+	<classpathentry kind="lib" path="D:/aaaSuite/lib6.8/DynamicJasper-2.0.10.jar"/>
+	<classpathentry kind="lib" path="D:/aaaSuite/lib6.8/DynamicJasper-2.0.10-tests.jar"/>
+	<classpathentry kind="lib" path="D:/aaaSuite/lib6.8/flexdock-0.4.1.jar"/>
+	<classpathentry kind="lib" path="D:/aaaSuite/lib6.8/freemarker.jar"/>
+	<classpathentry kind="lib" path="D:/aaaSuite/lib6.8/groovy-1.0.jar"/>
+	<classpathentry kind="lib" path="D:/aaaSuite/lib6.8/imap.jar"/>
+	<classpathentry kind="lib" path="D:/aaaSuite/lib6.8/iReport.jar"/>
+	<classpathentry kind="lib" path="D:/aaaSuite/lib6.8/itext-1.3.5.jar"/>
+	<classpathentry kind="lib" path="D:/aaaSuite/lib6.8/jakarta-bcel-20050813.jar"/>
+	<classpathentry kind="lib" path="D:/aaaSuite/lib6.8/jakarta-oro-2.0.8.jar"/>
+	<classpathentry kind="lib" path="D:/aaaSuite/lib6.8/JasperBabylon-1.0.0.jar"/>
+	<classpathentry kind="lib" path="D:/aaaSuite/lib6.8/jasperreports-2.0.2.jar"/>
+	<classpathentry kind="lib" path="D:/aaaSuite/lib6.8/jasperreports-extensions-1.3.1.jar"/>
+	<classpathentry kind="lib" path="D:/aaaSuite/lib6.8/javacup.jar"/>
+	<classpathentry kind="lib" path="D:/aaaSuite/lib6.8/javassist.jar"/>
+	<classpathentry kind="lib" path="D:/aaaSuite/lib6.8/jaxb-api.jar"/>
+	<classpathentry kind="lib" path="D:/aaaSuite/lib6.8/jaxb-impl.jar"/>
+	<classpathentry kind="lib" path="D:/aaaSuite/lib6.8/jaxb-xjc.jar"/>
+	<classpathentry kind="lib" path="D:/aaaSuite/lib6.8/jaxen-1.1.1.jar"/>
+	<classpathentry kind="lib" path="D:/aaaSuite/lib6.8/jaxen-core.jar"/>
+	<classpathentry kind="lib" path="D:/aaaSuite/lib6.8/jaxen-dom.jar"/>
+	<classpathentry kind="lib" path="D:/aaaSuite/lib6.8/jcalendar.jar"/>
+	<classpathentry kind="lib" path="D:/aaaSuite/lib6.8/jcmdline-1.0.2.jar"/>
+	<classpathentry kind="lib" path="D:/aaaSuite/lib6.8/jcommon-1.0.8.jar"/>
+	<classpathentry kind="lib" path="D:/aaaSuite/lib6.8/jcommon-xml-1.0.0.jar"/>
+	<classpathentry kind="lib" path="D:/aaaSuite/lib6.8/jdic.jar"/>
+	<classpathentry kind="lib" path="D:/aaaSuite/lib6.8/jdnc-jxcombobox.jar"/>
+	<classpathentry kind="lib" path="D:/aaaSuite/lib6.8/jdom.jar"/>
+	<classpathentry kind="lib" path="D:/aaaSuite/lib6.8/jdt-compiler-3.1.1.jar"/>
+	<classpathentry kind="lib" path="D:/aaaSuite/lib6.8/jfreechart-1.0.0.jar"/>
+	<classpathentry kind="lib" path="D:/aaaSuite/lib6.8/jh.jar"/>
+	<classpathentry kind="lib" path="D:/aaaSuite/lib6.8/jhall.jar"/>
+	<classpathentry kind="lib" path="D:/aaaSuite/lib6.8/jhbasic.jar"/>
+	<classpathentry kind="lib" path="D:/aaaSuite/lib6.8/jhelpdev.jar"/>
+	<classpathentry kind="lib" path="D:/aaaSuite/lib6.8/jhindexer.jar"/>
+	<classpathentry kind="lib" path="D:/aaaSuite/lib6.8/jhsearch.jar"/>
+	<classpathentry kind="lib" path="D:/aaaSuite/lib6.8/jmagallanes.jar"/>
+	<classpathentry kind="lib" path="D:/aaaSuite/lib6.8/jmf.jar"/>
+	<classpathentry kind="lib" path="D:/aaaSuite/lib6.8/jpa.jar"/>
+	<classpathentry kind="lib" path="D:/aaaSuite/lib6.8/jsearch.jar"/>
+	<classpathentry kind="lib" path="D:/aaaSuite/lib6.8/jsmoothgen-ant-0.9.7.jar"/>
+	<classpathentry kind="lib" path="D:/aaaSuite/lib6.8/json-lib-2.2.3-jdk15.jar"/>
+	<classpathentry kind="lib" path="D:/aaaSuite/lib6.8/jsr173_api.jar"/>
+	<classpathentry kind="lib" path="D:/aaaSuite/lib6.8/jsr181-api.jar"/>
+	<classpathentry kind="lib" path="D:/aaaSuite/lib6.8/jsr250-api.jar"/>
+	<classpathentry kind="lib" path="D:/aaaSuite/lib6.8/jta.jar"/>
+	<classpathentry kind="lib" path="D:/aaaSuite/lib6.8/jtds-1.2.jar"/>
+	<classpathentry kind="lib" path="D:/aaaSuite/lib6.8/juh.jar"/>
+	<classpathentry kind="lib" path="D:/aaaSuite/lib6.8/junit.jar"/>
+	<classpathentry kind="lib" path="D:/aaaSuite/lib6.8/log4j.jar"/>
+	<classpathentry kind="lib" path="D:/aaaSuite/lib6.8/log4j-core.jar"/>
+	<classpathentry kind="lib" path="D:/aaaSuite/lib6.8/looks-2.0-rc.jar"/>
+	<classpathentry kind="lib" path="D:/aaaSuite/lib6.8/mail.jar"/>
+	<classpathentry kind="lib" path="D:/aaaSuite/lib6.8/mailapi.jar"/>
+	<classpathentry kind="lib" path="D:/aaaSuite/lib6.8/mysql-connector-java-5.1.5-bin.jar"/>
+	<classpathentry kind="lib" path="D:/aaaSuite/lib6.8/png-encoder-1.5.jar"/>
+	<classpathentry kind="lib" path="D:/aaaSuite/lib6.8/poi-3.0.1-FINAL-20070705.jar"/>
+	<classpathentry kind="lib" path="D:/aaaSuite/lib6.8/rex-20070125.jar"/>
+	<classpathentry kind="lib" path="D:/aaaSuite/lib6.8/ridl.jar"/>
+	<classpathentry kind="lib" path="D:/aaaSuite/lib6.8/saaj-api-1.3.jar"/>
+	<classpathentry kind="lib" path="D:/aaaSuite/lib6.8/saxpath.jar"/>
+	<classpathentry kind="lib" path="D:/aaaSuite/lib6.8/servlet.jar"/>
+	<classpathentry kind="lib" path="D:/aaaSuite/lib6.8/servlet-api.jar"/>
+	<classpathentry kind="lib" path="D:/aaaSuite/lib6.8/slf4j-api.jar"/>
+	<classpathentry kind="lib" path="D:/aaaSuite/lib6.8/smtp.jar"/>
+	<classpathentry kind="lib" path="D:/aaaSuite/lib6.8/sound.jar"/>
+	<classpathentry kind="lib" path="D:/aaaSuite/lib6.8/spring-2.5.jar"/>
+	<classpathentry kind="lib" path="D:/aaaSuite/lib6.8/swing-layout-1.0.4.jar"/>
+	<classpathentry kind="lib" path="D:/aaaSuite/lib6.8/swing-worker-1.1.jar"/>
+	<classpathentry kind="lib" path="D:/aaaSuite/lib6.8/tinylaf.jar"/>
+	<classpathentry kind="lib" path="D:/aaaSuite/lib6.8/toniclf.jar"/>
+	<classpathentry kind="lib" path="D:/aaaSuite/lib6.8/toplink-essentials.jar"/>
+	<classpathentry kind="lib" path="D:/aaaSuite/lib6.8/toplink-essentials-agent.jar"/>
+	<classpathentry kind="lib" path="D:/aaaSuite/lib6.8/xercesImpl.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
