--- a/common2/.classpath
+++ b/common2/.classpath
@@ -104,5 +104,6 @@
 	<classpathentry kind="lib" path="D:/aaaSuite/lib6.8/toplink-essentials.jar"/>
 	<classpathentry kind="lib" path="D:/aaaSuite/lib6.8/toplink-essentials-agent.jar"/>
 	<classpathentry kind="lib" path="D:/aaaSuite/lib6.8/xercesImpl.jar"/>
+	<classpathentry kind="lib" path="D:/aaaSuite/lib6.8/Filters.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
