--- a/school2/.classpath
+++ b/school2/.classpath
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="src" path="srcCommon"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="D:/aaaSuite/lib6.8/ant-1.6.5.jar"/>
 	<classpathentry kind="lib" path="D:/aaaSuite/lib6.8/antlr-2.7.5.jar"/>
@@ -61,12 +60,6 @@
 	<classpathentry kind="lib" path="D:/aaaSuite/lib6.8/jdom.jar"/>
 	<classpathentry kind="lib" path="D:/aaaSuite/lib6.8/jdt-compiler-3.1.1.jar"/>
 	<classpathentry kind="lib" path="D:/aaaSuite/lib6.8/jfreechart-1.0.0.jar"/>
-	<classpathentry kind="lib" path="D:/aaaSuite/lib6.8/jh.jar"/>
-	<classpathentry kind="lib" path="D:/aaaSuite/lib6.8/jhall.jar"/>
-	<classpathentry kind="lib" path="D:/aaaSuite/lib6.8/jhbasic.jar"/>
-	<classpathentry kind="lib" path="D:/aaaSuite/lib6.8/jhelpdev.jar"/>
-	<classpathentry kind="lib" path="D:/aaaSuite/lib6.8/jhindexer.jar"/>
-	<classpathentry kind="lib" path="D:/aaaSuite/lib6.8/jhsearch.jar"/>
 	<classpathentry kind="lib" path="D:/aaaSuite/lib6.8/jmagallanes.jar"/>
 	<classpathentry kind="lib" path="D:/aaaSuite/lib6.8/jmf.jar"/>
 	<classpathentry kind="lib" path="D:/aaaSuite/lib6.8/jpa.jar"/>
@@ -105,5 +98,6 @@
 	<classpathentry kind="lib" path="D:/aaaSuite/lib6.8/toplink-essentials.jar"/>
 	<classpathentry kind="lib" path="D:/aaaSuite/lib6.8/toplink-essentials-agent.jar"/>
 	<classpathentry kind="lib" path="D:/aaaSuite/lib6.8/xercesImpl.jar"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/common2"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
