--- a/cargo2/nbproject/project.properties
+++ b/cargo2/nbproject/project.properties
@@ -20,116 +20,141 @@ dist.jar=${dist.dir}/cargo2.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.ant-1.6.5.jar=C:\\aaaSuite\\lib\\ant-1.6.5.jar
-file.reference.antlr-2.7.5.jar=C:\\aaaSuite\\lib\\antlr-2.7.5.jar
-file.reference.avalon-configuration.jar=C:\\aaaSuite\\lib\\avalon-configuration.jar
-file.reference.barbecue-1.1.jar=C:\\aaaSuite\\lib\\barbecue-1.1.jar
-file.reference.bcprov-jdk14.jar=C:\\aaaSuite\\lib\\bcprov-jdk14.jar
-file.reference.bsh-2.0b4.jar=C:\\aaaSuite\\lib\\bsh-2.0b4.jar
-file.reference.comm.jar=C:\\aaaSuite\\lib\\comm.jar
-file.reference.commons-beanutils-bean-collections.jar=C:\\aaaSuite\\lib\\commons-beanutils-bean-collections.jar
-file.reference.commons-beanutils-core.jar=C:\\aaaSuite\\lib\\commons-beanutils-core.jar
-file.reference.commons-beanutils.jar=C:\\aaaSuite\\lib\\commons-beanutils.jar
-file.reference.commons-collections-3.2.jar=C:\\aaaSuite\\lib\\commons-collections-3.2.jar
-file.reference.commons-collections-testframework-3.2.jar=C:\\aaaSuite\\lib\\commons-collections-testframework-3.2.jar
-file.reference.commons-configuration-1.1.jar=C:\\aaaSuite\\lib\\commons-configuration-1.1.jar
-file.reference.commons-dbcp-1.2.1.jar=C:\\aaaSuite\\lib\\commons-dbcp-1.2.1.jar
-file.reference.commons-digester-1.8.jar=C:\\aaaSuite\\lib\\commons-digester-1.8.jar
-file.reference.commons-javaflow-20060411.jar=C:\\aaaSuite\\lib\\commons-javaflow-20060411.jar
-file.reference.commons-lang-2.1.jar=C:\\aaaSuite\\lib\\commons-lang-2.1.jar
-file.reference.commons-lang-exception-2.0.jar=C:\\aaaSuite\\lib\\commons-lang-exception-2.0.jar
-file.reference.commons-logging-1.1.jar=C:\\aaaSuite\\lib\\commons-logging-1.1.jar
-file.reference.commons-logging-adapters-1.1.jar=C:\\aaaSuite\\lib\\commons-logging-adapters-1.1.jar
-file.reference.commons-logging-api.jar=C:\\aaaSuite\\lib\\commons-logging-api.jar
-file.reference.commons-math-1.0.jar=C:\\aaaSuite\\lib\\commons-math-1.0.jar
-file.reference.commons-pool-1.3.jar=C:\\aaaSuite\\lib\\commons-pool-1.3.jar
-file.reference.commons-validator-1.3.1.jar=C:\\aaaSuite\\lib\\commons-validator-1.3.1.jar
-file.reference.commons-vfs.jar=C:\\aaaSuite\\lib\\commons-vfs.jar
-file.reference.DynamicJasper-2.0.10-tests.jar=C:\\aaaSuite\\lib\\DynamicJasper-2.0.10-tests.jar
-file.reference.DynamicJasper-2.0.10.jar=C:\\aaaSuite\\lib\\DynamicJasper-2.0.10.jar
-file.reference.flexdock-0.4.1.jar=C:\\aaaSuite\\lib\\flexdock-0.4.1.jar
-file.reference.freemarker.jar=C:\\aaaSuite\\lib\\freemarker.jar
-file.reference.groovy-1.0.jar=C:\\aaaSuite\\lib\\groovy-1.0.jar
-file.reference.imap.jar=C:\\aaaSuite\\lib\\imap.jar
-file.reference.iReport.jar=C:\\aaaSuite\\lib\\iReport.jar
-file.reference.itext-1.3.5.jar=C:\\aaaSuite\\lib\\itext-1.3.5.jar
-file.reference.jakarta-bcel-20050813.jar=C:\\aaaSuite\\lib\\jakarta-bcel-20050813.jar
-file.reference.jakarta-oro-2.0.8.jar=C:\\aaaSuite\\lib\\jakarta-oro-2.0.8.jar
-file.reference.JasperBabylon-1.0.0.jar=C:\\aaaSuite\\lib\\JasperBabylon-1.0.0.jar
-file.reference.jasperreports-2.0.2.jar=C:\\aaaSuite\\lib\\jasperreports-2.0.2.jar
-file.reference.jasperreports-extensions-1.3.1.jar=C:\\aaaSuite\\lib\\jasperreports-extensions-1.3.1.jar
-file.reference.javacup.jar=C:\\aaaSuite\\lib\\javacup.jar
-file.reference.javassist.jar=C:\\aaaSuite\\lib\\javassist.jar
-file.reference.jaxb-api.jar=C:\\aaaSuite\\lib\\jaxb-api.jar
-file.reference.jaxb-impl.jar=C:\\aaaSuite\\lib\\jaxb-impl.jar
-file.reference.jaxb-xjc.jar=C:\\aaaSuite\\lib\\jaxb-xjc.jar
-file.reference.jaxen-1.1.1.jar=C:\\aaaSuite\\lib\\jaxen-1.1.1.jar
-file.reference.jaxen-core.jar=C:\\aaaSuite\\lib\\jaxen-core.jar
-file.reference.jaxen-dom.jar=C:\\aaaSuite\\lib\\jaxen-dom.jar
-file.reference.jcalendar.jar=C:\\aaaSuite\\lib\\jcalendar.jar
-file.reference.jcmdline-1.0.2.jar=C:\\aaaSuite\\lib\\jcmdline-1.0.2.jar
-file.reference.jcommon-1.0.8.jar=C:\\aaaSuite\\lib\\jcommon-1.0.8.jar
-file.reference.jcommon-xml-1.0.0.jar=C:\\aaaSuite\\lib\\jcommon-xml-1.0.0.jar
-file.reference.jdic.jar=C:\\aaaSuite\\lib\\jdic.jar
-file.reference.jdnc-jxcombobox.jar=C:\\aaaSuite\\lib\\jdnc-jxcombobox.jar
-file.reference.jdom.jar=C:\\aaaSuite\\lib\\jdom.jar
-file.reference.jdt-compiler-3.1.1.jar=C:\\aaaSuite\\lib\\jdt-compiler-3.1.1.jar
-file.reference.jfreechart-1.0.0.jar=C:\\aaaSuite\\lib\\jfreechart-1.0.0.jar
-file.reference.jh.jar=C:\\aaaSuite\\lib\\jh.jar
-file.reference.jhall.jar=C:\\aaaSuite\\lib\\jhall.jar
-file.reference.jhbasic.jar=C:\\aaaSuite\\lib\\jhbasic.jar
-file.reference.jhelpdev.jar=C:\\aaaSuite\\lib\\jhelpdev.jar
-file.reference.jhindexer.jar=C:\\aaaSuite\\lib\\jhindexer.jar
-file.reference.jhsearch.jar=C:\\aaaSuite\\lib\\jhsearch.jar
-file.reference.jmagallanes.jar=C:\\aaaSuite\\lib\\jmagallanes.jar
-file.reference.jmf.jar=C:\\aaaSuite\\lib\\jmf.jar
-file.reference.jpa.jar=C:\\aaaSuite\\lib\\jpa.jar
-file.reference.jsearch.jar=C:\\aaaSuite\\lib\\jsearch.jar
-file.reference.jsmoothgen-ant-0.9.7.jar=C:\\aaaSuite\\lib\\jsmoothgen-ant-0.9.7.jar
-file.reference.json-lib-2.2.3-jdk15.jar=C:\\aaaSuite\\lib\\json-lib-2.2.3-jdk15.jar
-file.reference.jsr173_api.jar=C:\\aaaSuite\\lib\\jsr173_api.jar
-file.reference.jsr181-api.jar=C:\\aaaSuite\\lib\\jsr181-api.jar
-file.reference.jsr250-api.jar=C:\\aaaSuite\\lib\\jsr250-api.jar
-file.reference.jta.jar=C:\\aaaSuite\\lib\\jta.jar
-file.reference.jtds-1.2.jar=C:\\aaaSuite\\lib\\jtds-1.2.jar
-file.reference.juh.jar=C:\\aaaSuite\\lib\\juh.jar
-file.reference.junit.jar=C:\\aaaSuite\\lib\\junit.jar
-file.reference.log4j-core.jar=C:\\aaaSuite\\lib\\log4j-core.jar
-file.reference.log4j.jar=C:\\aaaSuite\\lib\\log4j.jar
-file.reference.looks-2.0-rc.jar=C:\\aaaSuite\\lib\\looks-2.0-rc.jar
-file.reference.mail.jar=C:\\aaaSuite\\lib\\mail.jar
-file.reference.mailapi.jar=C:\\aaaSuite\\lib\\mailapi.jar
-file.reference.mysql-connector-java-5.1.5-bin.jar=C:\\aaaSuite\\lib\\mysql-connector-java-5.1.5-bin.jar
-file.reference.png-encoder-1.5.jar=C:\\aaaSuite\\lib\\png-encoder-1.5.jar
-file.reference.poi-3.0.1-FINAL-20070705.jar=C:\\aaaSuite\\lib\\poi-3.0.1-FINAL-20070705.jar
-file.reference.rex-20070125.jar=C:\\aaaSuite\\lib\\rex-20070125.jar
-file.reference.ridl.jar=C:\\aaaSuite\\lib\\ridl.jar
-file.reference.saaj-api-1.3.jar=C:\\aaaSuite\\lib\\saaj-api-1.3.jar
-file.reference.saxpath.jar=C:\\aaaSuite\\lib\\saxpath.jar
-file.reference.servlet-api.jar=C:\\aaaSuite\\lib\\servlet-api.jar
-file.reference.servlet.jar=C:\\aaaSuite\\lib\\servlet.jar
-file.reference.slf4j-api.jar=C:\\aaaSuite\\lib\\slf4j-api.jar
-file.reference.smtp.jar=C:\\aaaSuite\\lib\\smtp.jar
-file.reference.sound.jar=C:\\aaaSuite\\lib\\sound.jar
-file.reference.tinylaf.jar=C:\\aaaSuite\\lib\\tinylaf.jar
-file.reference.toniclf.jar=C:\\aaaSuite\\lib\\toniclf.jar
-file.reference.xercesImpl.jar=C:\\aaaSuite\\lib\\xercesImpl.jar
+file.reference.ant-1.6.5.jar=D:\\aaaSuite\\lib6.8\\ant-1.6.5.jar
+file.reference.antlr-2.7.5.jar=D:\\aaaSuite\\lib6.8\\antlr-2.7.5.jar
+file.reference.appframework-1.0.3.jar=D:\\aaaSuite\\lib6.8\\appframework-1.0.3.jar
+file.reference.avalon-configuration.jar=D:\\aaaSuite\\lib6.8\\avalon-configuration.jar
+file.reference.barbecue-1.1.jar=D:\\aaaSuite\\lib6.8\\barbecue-1.1.jar
+file.reference.bcprov-jdk14.jar=D:\\aaaSuite\\lib6.8\\bcprov-jdk14.jar
+file.reference.beansbinding-1.2.1.jar=D:\\aaaSuite\\lib6.8\\beansbinding-1.2.1.jar
+file.reference.bsh-2.0b4.jar=D:\\aaaSuite\\lib6.8\\bsh-2.0b4.jar
+file.reference.cglib-2.2.jar=D:\\aaaSuite\\lib6.8\\cglib-2.2.jar
+file.reference.comm.jar=D:\\aaaSuite\\lib6.8\\comm.jar
+file.reference.commons-beanutils-bean-collections.jar=D:\\aaaSuite\\lib6.8\\commons-beanutils-bean-collections.jar
+file.reference.commons-beanutils-core.jar=D:\\aaaSuite\\lib6.8\\commons-beanutils-core.jar
+file.reference.commons-beanutils.jar=D:\\aaaSuite\\lib6.8\\commons-beanutils.jar
+file.reference.commons-collections-3.2.jar=D:\\aaaSuite\\lib6.8\\commons-collections-3.2.jar
+file.reference.commons-collections-testframework-3.2.jar=D:\\aaaSuite\\lib6.8\\commons-collections-testframework-3.2.jar
+file.reference.commons-configuration-1.1.jar=D:\\aaaSuite\\lib6.8\\commons-configuration-1.1.jar
+file.reference.commons-dbcp-1.2.1.jar=D:\\aaaSuite\\lib6.8\\commons-dbcp-1.2.1.jar
+file.reference.commons-digester-1.8.jar=D:\\aaaSuite\\lib6.8\\commons-digester-1.8.jar
+file.reference.commons-javaflow-20060411.jar=D:\\aaaSuite\\lib6.8\\commons-javaflow-20060411.jar
+file.reference.commons-lang-2.1.jar=D:\\aaaSuite\\lib6.8\\commons-lang-2.1.jar
+file.reference.commons-lang-exception-2.0.jar=D:\\aaaSuite\\lib6.8\\commons-lang-exception-2.0.jar
+file.reference.commons-logging-1.1.jar=D:\\aaaSuite\\lib6.8\\commons-logging-1.1.jar
+file.reference.commons-logging-adapters-1.1.jar=D:\\aaaSuite\\lib6.8\\commons-logging-adapters-1.1.jar
+file.reference.commons-logging-api.jar=D:\\aaaSuite\\lib6.8\\commons-logging-api.jar
+file.reference.commons-math-1.0.jar=D:\\aaaSuite\\lib6.8\\commons-math-1.0.jar
+file.reference.commons-pool-1.3.jar=D:\\aaaSuite\\lib6.8\\commons-pool-1.3.jar
+file.reference.commons-validator-1.3.1.jar=D:\\aaaSuite\\lib6.8\\commons-validator-1.3.1.jar
+file.reference.commons-vfs.jar=D:\\aaaSuite\\lib6.8\\commons-vfs.jar
+file.reference.DynamicJasper-2.0.10-tests.jar=D:\\aaaSuite\\lib6.8\\DynamicJasper-2.0.10-tests.jar
+file.reference.DynamicJasper-2.0.10.jar=D:\\aaaSuite\\lib6.8\\DynamicJasper-2.0.10.jar
+file.reference.Filters.jar=D:\\aaaSuite\\lib6.8\\Filters.jar
+file.reference.flexdock-0.4.1.jar=D:\\aaaSuite\\lib6.8\\flexdock-0.4.1.jar
+file.reference.freemarker.jar=D:\\aaaSuite\\lib6.8\\freemarker.jar
+file.reference.groovy-1.0.jar=D:\\aaaSuite\\lib6.8\\groovy-1.0.jar
+file.reference.imap.jar=D:\\aaaSuite\\lib6.8\\imap.jar
+file.reference.iReport.jar=D:\\aaaSuite\\lib6.8\\iReport.jar
+file.reference.itext-1.3.5.jar=D:\\aaaSuite\\lib6.8\\itext-1.3.5.jar
+file.reference.jakarta-bcel-20050813.jar=D:\\aaaSuite\\lib6.8\\jakarta-bcel-20050813.jar
+file.reference.jakarta-oro-2.0.8.jar=D:\\aaaSuite\\lib6.8\\jakarta-oro-2.0.8.jar
+file.reference.JasperBabylon-1.0.0.jar=D:\\aaaSuite\\lib6.8\\JasperBabylon-1.0.0.jar
+file.reference.jasperreports-2.0.2.jar=D:\\aaaSuite\\lib6.8\\jasperreports-2.0.2.jar
+file.reference.jasperreports-extensions-1.3.1.jar=D:\\aaaSuite\\lib6.8\\jasperreports-extensions-1.3.1.jar
+file.reference.javacup.jar=D:\\aaaSuite\\lib6.8\\javacup.jar
+file.reference.javassist.jar=D:\\aaaSuite\\lib6.8\\javassist.jar
+file.reference.jaxb-api.jar=D:\\aaaSuite\\lib6.8\\jaxb-api.jar
+file.reference.jaxb-impl.jar=D:\\aaaSuite\\lib6.8\\jaxb-impl.jar
+file.reference.jaxb-xjc.jar=D:\\aaaSuite\\lib6.8\\jaxb-xjc.jar
+file.reference.jaxen-1.1.1.jar=D:\\aaaSuite\\lib6.8\\jaxen-1.1.1.jar
+file.reference.jaxen-core.jar=D:\\aaaSuite\\lib6.8\\jaxen-core.jar
+file.reference.jaxen-dom.jar=D:\\aaaSuite\\lib6.8\\jaxen-dom.jar
+file.reference.jcalendar.jar=D:\\aaaSuite\\lib6.8\\jcalendar.jar
+file.reference.jcmdline-1.0.2.jar=D:\\aaaSuite\\lib6.8\\jcmdline-1.0.2.jar
+file.reference.jcommon-1.0.8.jar=D:\\aaaSuite\\lib6.8\\jcommon-1.0.8.jar
+file.reference.jcommon-xml-1.0.0.jar=D:\\aaaSuite\\lib6.8\\jcommon-xml-1.0.0.jar
+file.reference.jdic.jar=D:\\aaaSuite\\lib6.8\\jdic.jar
+file.reference.jdnc-jxcombobox.jar=D:\\aaaSuite\\lib6.8\\jdnc-jxcombobox.jar
+file.reference.jdom.jar=D:\\aaaSuite\\lib6.8\\jdom.jar
+file.reference.jdt-compiler-3.1.1.jar=D:\\aaaSuite\\lib6.8\\jdt-compiler-3.1.1.jar
+file.reference.jfreechart-1.0.0.jar=D:\\aaaSuite\\lib6.8\\jfreechart-1.0.0.jar
+file.reference.jmagallanes.jar=D:\\aaaSuite\\lib6.8\\jmagallanes.jar
+file.reference.jmf.jar=D:\\aaaSuite\\lib6.8\\jmf.jar
+file.reference.jpa.jar=D:\\aaaSuite\\lib6.8\\jpa.jar
+file.reference.jsearch.jar=D:\\aaaSuite\\lib6.8\\jsearch.jar
+file.reference.jsmoothgen-ant-0.9.7.jar=D:\\aaaSuite\\lib6.8\\jsmoothgen-ant-0.9.7.jar
+file.reference.json-lib-2.2.3-jdk15.jar=D:\\aaaSuite\\lib6.8\\json-lib-2.2.3-jdk15.jar
+file.reference.jsr173_api.jar=D:\\aaaSuite\\lib6.8\\jsr173_api.jar
+file.reference.jsr181-api.jar=D:\\aaaSuite\\lib6.8\\jsr181-api.jar
+file.reference.jsr250-api.jar=D:\\aaaSuite\\lib6.8\\jsr250-api.jar
+file.reference.jta.jar=D:\\aaaSuite\\lib6.8\\jta.jar
+file.reference.jtds-1.2.jar=D:\\aaaSuite\\lib6.8\\jtds-1.2.jar
+file.reference.juh.jar=D:\\aaaSuite\\lib6.8\\juh.jar
+file.reference.junit.jar=D:\\aaaSuite\\lib6.8\\junit.jar
+file.reference.log4j-core.jar=D:\\aaaSuite\\lib6.8\\log4j-core.jar
+file.reference.log4j.jar=D:\\aaaSuite\\lib6.8\\log4j.jar
+file.reference.looks-2.0-rc.jar=D:\\aaaSuite\\lib6.8\\looks-2.0-rc.jar
+file.reference.mail.jar=D:\\aaaSuite\\lib6.8\\mail.jar
+file.reference.mailapi.jar=D:\\aaaSuite\\lib6.8\\mailapi.jar
+file.reference.mysql-connector-java-5.1.5-bin.jar=D:\\aaaSuite\\lib6.8\\mysql-connector-java-5.1.5-bin.jar
+file.reference.png-encoder-1.5.jar=D:\\aaaSuite\\lib6.8\\png-encoder-1.5.jar
+file.reference.poi-3.0.1-FINAL-20070705.jar=D:\\aaaSuite\\lib6.8\\poi-3.0.1-FINAL-20070705.jar
+file.reference.rex-20070125.jar=D:\\aaaSuite\\lib6.8\\rex-20070125.jar
+file.reference.ridl.jar=D:\\aaaSuite\\lib6.8\\ridl.jar
+file.reference.saaj-api-1.3.jar=D:\\aaaSuite\\lib6.8\\saaj-api-1.3.jar
+file.reference.saxpath.jar=D:\\aaaSuite\\lib6.8\\saxpath.jar
+file.reference.servlet-api.jar=D:\\aaaSuite\\lib6.8\\servlet-api.jar
+file.reference.servlet.jar=D:\\aaaSuite\\lib6.8\\servlet.jar
+file.reference.slf4j-api.jar=D:\\aaaSuite\\lib6.8\\slf4j-api.jar
+file.reference.smtp.jar=D:\\aaaSuite\\lib6.8\\smtp.jar
+file.reference.sound.jar=D:\\aaaSuite\\lib6.8\\sound.jar
+file.reference.spring-2.5.jar=D:\\aaaSuite\\lib6.8\\spring-2.5.jar
+file.reference.swing-layout-1.0.4.jar=D:\\aaaSuite\\lib6.8\\swing-layout-1.0.4.jar
+file.reference.swing-worker-1.1.jar=D:\\aaaSuite\\lib6.8\\swing-worker-1.1.jar
+file.reference.tinylaf.jar=D:\\aaaSuite\\lib6.8\\tinylaf.jar
+file.reference.toniclf.jar=D:\\aaaSuite\\lib6.8\\toniclf.jar
+file.reference.toplink-essentials-agent.jar=D:\\aaaSuite\\lib6.8\\toplink-essentials-agent.jar
+file.reference.toplink-essentials.jar=D:\\aaaSuite\\lib6.8\\toplink-essentials.jar
+file.reference.xercesImpl.jar=D:\\aaaSuite\\lib6.8\\xercesImpl.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.beans-binding.classpath}:\
-    ${libs.swing-app-framework.classpath}:\
-    ${libs.swing-layout.classpath}:\
-    ${libs.spring-framework.classpath}:\
-    ${libs.toplink.classpath}:\
+    ${reference.common2.jar}:\
     ${file.reference.ant-1.6.5.jar}:\
     ${file.reference.antlr-2.7.5.jar}:\
+    ${file.reference.appframework-1.0.3.jar}:\
     ${file.reference.avalon-configuration.jar}:\
     ${file.reference.barbecue-1.1.jar}:\
     ${file.reference.bcprov-jdk14.jar}:\
+    ${file.reference.beansbinding-1.2.1.jar}:\
     ${file.reference.bsh-2.0b4.jar}:\
+    ${file.reference.cglib-2.2.jar}:\
+    ${file.reference.comm.jar}:\
+    ${file.reference.commons-beanutils-bean-collections.jar}:\
+    ${file.reference.commons-beanutils-core.jar}:\
+    ${file.reference.commons-beanutils.jar}:\
+    ${file.reference.commons-collections-3.2.jar}:\
+    ${file.reference.commons-collections-testframework-3.2.jar}:\
+    ${file.reference.commons-configuration-1.1.jar}:\
+    ${file.reference.commons-dbcp-1.2.1.jar}:\
+    ${file.reference.commons-digester-1.8.jar}:\
+    ${file.reference.commons-javaflow-20060411.jar}:\
+    ${file.reference.commons-lang-2.1.jar}:\
+    ${file.reference.commons-lang-exception-2.0.jar}:\
+    ${file.reference.commons-logging-1.1.jar}:\
+    ${file.reference.commons-logging-adapters-1.1.jar}:\
+    ${file.reference.commons-logging-api.jar}:\
+    ${file.reference.commons-math-1.0.jar}:\
+    ${file.reference.commons-pool-1.3.jar}:\
+    ${file.reference.commons-validator-1.3.1.jar}:\
+    ${file.reference.commons-vfs.jar}:\
     ${file.reference.DynamicJasper-2.0.10-tests.jar}:\
     ${file.reference.DynamicJasper-2.0.10.jar}:\
+    ${file.reference.Filters.jar}:\
+    ${file.reference.flexdock-0.4.1.jar}:\
+    ${file.reference.freemarker.jar}:\
+    ${file.reference.groovy-1.0.jar}:\
     ${file.reference.imap.jar}:\
     ${file.reference.iReport.jar}:\
     ${file.reference.itext-1.3.5.jar}:\
@@ -155,12 +180,6 @@ javac.classpath=\
     ${file.reference.jdom.jar}:\
     ${file.reference.jdt-compiler-3.1.1.jar}:\
     ${file.reference.jfreechart-1.0.0.jar}:\
-    ${file.reference.jh.jar}:\
-    ${file.reference.jhall.jar}:\
-    ${file.reference.jhbasic.jar}:\
-    ${file.reference.jhelpdev.jar}:\
-    ${file.reference.jhindexer.jar}:\
-    ${file.reference.jhsearch.jar}:\
     ${file.reference.jmagallanes.jar}:\
     ${file.reference.jmf.jar}:\
     ${file.reference.jpa.jar}:\
@@ -191,31 +210,14 @@ javac.classpath=\
     ${file.reference.slf4j-api.jar}:\
     ${file.reference.smtp.jar}:\
     ${file.reference.sound.jar}:\
+    ${file.reference.spring-2.5.jar}:\
+    ${file.reference.swing-layout-1.0.4.jar}:\
+    ${file.reference.swing-worker-1.1.jar}:\
     ${file.reference.tinylaf.jar}:\
     ${file.reference.toniclf.jar}:\
-    ${file.reference.comm.jar}:\
-    ${file.reference.xercesImpl.jar}:\
-    ${file.reference.freemarker.jar}:\
-    ${file.reference.groovy-1.0.jar}:\
-    ${file.reference.commons-beanutils-bean-collections.jar}:\
-    ${file.reference.commons-beanutils-core.jar}:\
-    ${file.reference.commons-beanutils.jar}:\
-    ${file.reference.commons-collections-3.2.jar}:\
-    ${file.reference.commons-collections-testframework-3.2.jar}:\
-    ${file.reference.commons-configuration-1.1.jar}:\
-    ${file.reference.commons-dbcp-1.2.1.jar}:\
-    ${file.reference.commons-digester-1.8.jar}:\
-    ${file.reference.commons-javaflow-20060411.jar}:\
-    ${file.reference.commons-lang-2.1.jar}:\
-    ${file.reference.commons-lang-exception-2.0.jar}:\
-    ${file.reference.commons-logging-1.1.jar}:\
-    ${file.reference.commons-logging-adapters-1.1.jar}:\
-    ${file.reference.commons-logging-api.jar}:\
-    ${file.reference.commons-math-1.0.jar}:\
-    ${file.reference.commons-pool-1.3.jar}:\
-    ${file.reference.commons-validator-1.3.1.jar}:\
-    ${file.reference.commons-vfs.jar}:\
-    ${file.reference.flexdock-0.4.1.jar}
+    ${file.reference.toplink-essentials-agent.jar}:\
+    ${file.reference.toplink-essentials.jar}:\
+    ${file.reference.xercesImpl.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -250,6 +252,8 @@ manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 no.dependencies=true
 platform.active=default_platform
+project.common2=../common2
+reference.common2.jar=${project.common2}/dist/common2.jar
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
