--- a/cargo2/nbproject/project.properties
+++ b/cargo2/nbproject/project.properties
@@ -1,3 +1,4 @@
+ant.customtasks.libs=JWSAntTasks
 application.title=cargo2
 application.vendor=Charliemagne Mark
 build.classes.dir=${build.dir}/classes
@@ -244,7 +245,7 @@ jnlp.codebase.type=user
 jnlp.codebase.url=file:/D:/aaaSuite/cargo2/dist/
 jnlp.codebase.user=http://server:8080/cargoService
 jnlp.descriptor=application
-jnlp.enabled=false
+jnlp.enabled=true
 jnlp.offline-allowed=true
 jnlp.signed=true
 main.class=cargo2.Main
@@ -266,5 +267,4 @@ run.test.classpath=\
     ${build.test.classes.dir}
 source.encoding=UTF-8
 src.dir=src
-src.srcCommon.dir=srcCommon
 test.src.dir=test
