--- a/school2/nbproject/project.properties
+++ b/school2/nbproject/project.properties
@@ -1,4 +1,5 @@
-application.title=school2
+application.desc=Vendor of automated system for school
+application.title=SchoolSoft
 application.vendor=Miranda Workbench Software
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
@@ -55,7 +56,6 @@ file.reference.flexdock-0.4.1.jar=D:\\aaaSuite\\lib6.8\\flexdock-0.4.1.jar
 file.reference.freemarker.jar=D:\\aaaSuite\\lib6.8\\freemarker.jar
 file.reference.groovy-1.0.jar=D:\\aaaSuite\\lib6.8\\groovy-1.0.jar
 file.reference.imap.jar=D:\\aaaSuite\\lib6.8\\imap.jar
-file.reference.iReport.jar=D:\\aaaSuite\\lib6.8\\iReport.jar
 file.reference.itext-1.3.5.jar=D:\\aaaSuite\\lib6.8\\itext-1.3.5.jar
 file.reference.jakarta-bcel-20050813.jar=D:\\aaaSuite\\lib6.8\\jakarta-bcel-20050813.jar
 file.reference.jakarta-oro-2.0.8.jar=D:\\aaaSuite\\lib6.8\\jakarta-oro-2.0.8.jar
@@ -156,7 +156,6 @@ javac.classpath=\
     ${file.reference.freemarker.jar}:\
     ${file.reference.groovy-1.0.jar}:\
     ${file.reference.imap.jar}:\
-    ${file.reference.iReport.jar}:\
     ${file.reference.itext-1.3.5.jar}:\
     ${file.reference.jakarta-bcel-20050813.jar}:\
     ${file.reference.jakarta-oro-2.0.8.jar}:\
@@ -241,7 +240,7 @@ javadoc.version=false
 javadoc.windowtitle=
 jaxbwiz.endorsed.dirs="${netbeans.home}/../ide12/modules/ext/jaxb/api"
 jnlp.codebase.type=user
-jnlp.codebase.user=http://server:8080/schoolService
+jnlp.codebase.user=http://www.mysoftlabs.com/schoolService
 jnlp.descriptor=application
 jnlp.enabled=true
 jnlp.offline-allowed=true
@@ -265,3 +264,8 @@ run.test.classpath=\
 source.encoding=ISO-8859-1
 src.dir=src
 test.src.dir=test
+
+
+# Properties needed for signing JAR files
+webstart.src.dir=dist
+webstart.dist.dir=webstart_dist
