--- a/cargo2/nbproject/project.properties
+++ b/cargo2/nbproject/project.properties
@@ -1,6 +1,7 @@
 ant.customtasks.libs=JWSAntTasks
-application.title=cargo2
-application.vendor=Charliemagne Mark
+application.desc=Vendor of automated system for cargo
+application.title=CargoSoft
+application.vendor=Miranda Workbench Softwares
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -56,7 +57,6 @@ file.reference.flexdock-0.4.1.jar=D:\\aaaSuite\\lib6.8\\flexdock-0.4.1.jar
 file.reference.freemarker.jar=D:\\aaaSuite\\lib6.8\\freemarker.jar
 file.reference.groovy-1.0.jar=D:\\aaaSuite\\lib6.8\\groovy-1.0.jar
 file.reference.imap.jar=D:\\aaaSuite\\lib6.8\\imap.jar
-file.reference.iReport.jar=D:\\aaaSuite\\lib6.8\\iReport.jar
 file.reference.itext-1.3.5.jar=D:\\aaaSuite\\lib6.8\\itext-1.3.5.jar
 file.reference.jakarta-bcel-20050813.jar=D:\\aaaSuite\\lib6.8\\jakarta-bcel-20050813.jar
 file.reference.jakarta-oro-2.0.8.jar=D:\\aaaSuite\\lib6.8\\jakarta-oro-2.0.8.jar
@@ -157,7 +157,6 @@ javac.classpath=\
     ${file.reference.freemarker.jar}:\
     ${file.reference.groovy-1.0.jar}:\
     ${file.reference.imap.jar}:\
-    ${file.reference.iReport.jar}:\
     ${file.reference.itext-1.3.5.jar}:\
     ${file.reference.jakarta-bcel-20050813.jar}:\
     ${file.reference.jakarta-oro-2.0.8.jar}:\
@@ -243,7 +242,7 @@ javadoc.windowtitle=
 jaxbwiz.endorsed.dirs="${netbeans.home}/../ide12/modules/ext/jaxb/api"
 jnlp.codebase.type=user
 jnlp.codebase.url=file:/D:/aaaSuite/cargo2/dist/
-jnlp.codebase.user=http://server:8080/cargoService
+jnlp.codebase.user=http://www.mysoftlabs.com/cargoService
 jnlp.descriptor=application
 jnlp.enabled=true
 jnlp.offline-allowed=true
