Seton Grade Enhancement.

--- a/common2/nbproject/project.properties
+++ b/common2/nbproject/project.properties
@@ -241,7 +241,8 @@ javadoc.windowtitle=
 jaxbwiz.endorsed.dirs="${netbeans.home}/../ide12/modules/ext/jaxb/api"
 jnlp.codebase.type=local
 jnlp.codebase.url=file:/D:/aaaSuite/common2/dist/
-jnlp.enabled=true
+jnlp.descriptor=application
+jnlp.enabled=false
 jnlp.offline-allowed=false
 jnlp.signed=false
 main.class=common2.Common2App
