--- a/school2/nbproject/project.properties
+++ b/school2/nbproject/project.properties
@@ -242,7 +242,7 @@ jaxbwiz.endorsed.dirs="${netbeans.home}/../ide12/modules/ext/jaxb/api"
 jnlp.codebase.type=user
 jnlp.codebase.user=http://www.mysoftlabs.com/schoolService
 jnlp.descriptor=application
-jnlp.enabled=true
+jnlp.enabled=false
 jnlp.offline-allowed=true
 jnlp.signed=true
 main.class=school2.Main
