--- a/cargo2/nbproject/project.properties
+++ b/cargo2/nbproject/project.properties
@@ -221,8 +221,8 @@ javac.classpath=\
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
-javac.source=1.5
-javac.target=1.5
+javac.source=1.6
+javac.target=1.6
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}:\
@@ -244,7 +244,7 @@ jnlp.codebase.type=user
 jnlp.codebase.url=file:/D:/aaaSuite/cargo2/dist/
 jnlp.codebase.user=http://www.mysoftlabs.com/cargoService
 jnlp.descriptor=application
-jnlp.enabled=true
+jnlp.enabled=false
 jnlp.offline-allowed=true
 jnlp.signed=true
 main.class=cargo2.Main
