--- a/cargo2/nbproject/project.properties
+++ b/cargo2/nbproject/project.properties
@@ -244,7 +244,7 @@ jnlp.codebase.type=user
 jnlp.codebase.url=file:/D:/aaaSuite/cargo2/dist/
 jnlp.codebase.user=http://www.mysoftlabs.com/cargoService
 jnlp.descriptor=application
-jnlp.enabled=false
+jnlp.enabled=true
 jnlp.offline-allowed=true
 jnlp.signed=true
 main.class=cargo2.Main
