--- a/mis2/nbproject/project.properties
+++ b/mis2/nbproject/project.properties
@@ -223,7 +223,8 @@ javac.classpath=\
     ${file.reference.toniclf.jar}:\
     ${file.reference.toplink-essentials-agent.jar}:\
     ${file.reference.toplink-essentials.jar}:\
-    ${file.reference.xercesImpl.jar}
+    ${file.reference.xercesImpl.jar}:\
+    ${libs.eclipselink.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
